--- a/practicas/P1/P1.ipynb
+++ b/practicas/P1/P1.ipynb
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "3092c109",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1017,7 @@
     "dp2di = v2/1000\n",
     "\n",
     "p2_u_c = np.sqrt((dp2dv * v_u_c_2)**2 + (dp2di * i_u_c_2)**2)\n",
-    "\n",
+    "p2_u_c = u_c(dfdx=dp2dv, dfdy=dp2di, ux=v_u_c_2, uy=i_u_c_2)\n",
     "print(f\"\"\"\n",
     "P2 = ({p1:0.3f} ± {p1_u_c:0.3f}) W\n",
     "P2 = ({p2:0.4f} ± {p2_u_c:0.3f}) W\n",
