--- a/practicas/P1/P1.ipynb
+++ b/practicas/P1/P1.ipynb
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "3092c109",
    "metadata": {},
    "outputs": [
@@ -1009,14 +1009,13 @@
     "dp1dv = i\n",
     "dp1di = v\n",
     "\n",
-    "p1_u_c = np.sqrt((dp1dv * v_u_c_1)**2 + (dp1di * i_u_c_1)**2)\n",
+    "p1_u_c = u_c(dfdx=dp1dv, dfdy=dp1di, ux=v_u_c_1, uy=i_u_c_1)\n",
     "\n",
     "# POTENCIA CASO 2\n",
     "p2 = (v2/1000) * (i2/1000)\n",
     "dp2dv = i2/1000\n",
     "dp2di = v2/1000\n",
     "\n",
-    "p2_u_c = np.sqrt((dp2dv * v_u_c_2)**2 + (dp2di * i_u_c_2)**2)\n",
     "p2_u_c = u_c(dfdx=dp2dv, dfdy=dp2di, ux=v_u_c_2, uy=i_u_c_2)\n",
     "print(f\"\"\"\n",
     "P2 = ({p1:0.3f} ± {p1_u_c:0.3f}) W\n",
