--- a/practicas/P1/P1.ipynb
+++ b/practicas/P1/P1.ipynb
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "3092c109",
    "metadata": {},
    "outputs": [
@@ -998,7 +998,7 @@
      "text": [
       "\n",
       "P2 = (1233.800 ± 0.865) W\n",
-      "P2 = (0.0097 ± 0.0076) W\n",
+      "P2 = (9.727 ± 0.008) mW\n",
       "\n"
      ]
     }
@@ -1016,11 +1016,11 @@
     "dp2dv = i2/1000\n",
     "dp2di = v2/1000\n",
     "\n",
-    "p2_u_c = u_c(dfdx=dp2dv, dfdy=dp2di, ux=v_u_c_2, uy=i_u_c_2)\n",
+    "p2_u_c = u_c(dfdx=dp2dv, dfdy=dp2di, ux=v_u_c_2/1000, uy=i_u_c_2/1000)\n",
     "\n",
     "print(f\"\"\"\n",
     "P2 = ({p1:0.3f} ± {p1_u_c:0.3f}) W\n",
-    "P2 = ({p2:0.4f} ± {p2_u_c:0.4f}) W\n",
+    "P2 = ({p2*1000:0.3f} ± {p2_u_c*1000:0.3f}) mW\n",
     "\"\"\")"
    ]
   }
